# SPIRVSmith-Server-Client

./: .gitignore  README.md  example.py  openapi.json  pyproject.toml
docs/: BodySubmitBuffersBuffersShaderIdPost.md  BufferSubmission.md  DefaultApi.md  DefaultYe.md  ExecutionPlatform.md  ExecutionQueue.md  ExecutionQueues.md  FuzzingStrategy.md  GeneratorInfo.md  HardwareInformation.md  HardwareType.md  HardwareVendor.md  MutationsConfig.md  OperatingSystem.md  RetrievedShader.md  ShaderSubmission.md  VulkanBackend.md
openapi_client/: api_client.py  exceptions.py  model_utils.py  rest.py
openapi_client/api/: default_api.py
openapi_client/model/: buffer_submission.py  execution_platform.py  execution_queue.py  execution_queues.py  fuzzing_strategy.py  generator_info.py  hardware_information.py  hardware_type.py  hardware_vendor.py  location_inner.py  mutations_config.py  (+5 more)
spirvsmith_server_client/: __init__.py
spirvsmith_server_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py  schemas.py
test/: test_body_submit_buffers_buffers_shader_id_post.py  test_buffer_submission.py  test_default_api.py  test_default_ye.py  test_execution_platform.py  test_execution_queue.py  test_execution_queues.py  test_fuzzing_strategy.py  test_generator_info.py  test_hardware_information.py  test_hardware_type.py  test_hardware_vendor.py  test_http_validation_error.py  test_location_inner.py  test_mutations_config.py  test_operating_system.py  test_retrieved_shader.py  test_shader_submission.py  test_validation_error.py  test_vulkan_backend.py
(+100 files in other folders)
