[tool.poetry]
name = "spirvsmith-server-sdk"
version = "0.1.0"
description = ""
authors = ["Rayan Hatout <rayan.hatout@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
